[publish] TW-53360 New Pagination UI - fix spacing between links and buttons

--- a/components/pager/pager.css
+++ b/components/pager/pager.css
@@ -5,7 +5,7 @@
 }
 
 .links {
-  margin-bottom: calc(unit * 2);
+  margin-bottom: calc(unit);
 }
 
 .link {
